feat: add authentication, authorization and graceful shutdown
